--- a/app/src/main/res/layout/video_layout.xml
+++ b/app/src/main/res/layout/video_layout.xml
@@ -1,13 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <VideoView
+        android:id="@+id/videoview"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_margin="8dp"
+        />
+
+    <TextView
+        android:id="@+id/buffering_textview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+       />
 
     <Button
         android:id="@+id/pickVideo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Pick a video and view"/>
+        android:layout_below="@+id/videoview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:text="Pick a video" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/uploadVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/pickVideo"
+        android:layout_alignStart="@+id/pickVideo"
+        android:layout_below="@+id/pickVideo"
+        android:layout_marginTop="20dp"
+        android:text="Upload Video" />
+
+</RelativeLayout>
